veil-tests/src/compile_tests/fail/redact_union.rs
fn main() {}

#[derive(veil::Redact)]
union Foo {
    bar: u32,
    baz: u64
}
